fix: gap en table generaba separacion entre cuadros

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
   .contenedorCuadros {
       grid-template-columns: repeat(1, 1fr);
-      grid-gap: 10px;
+      grid-gap: 0px;
   }
 
   .cuadro1,
